--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
@@ -25,6 +26,7 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.2",
+    "react-router-dom": "^6.20.1",
     "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5"
   },
